compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__let_exhaustiveness4.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1453
expression: "\npub type Media {\n    Audio(BitString)\n    Video(BitString)\n    Text(String)\n}\npub fn main(m) {\n    let Video(_) as v = m\n    v\n}\n"

---
error: Not exhaustive pattern match
  ┌─ /src/one/two.gleam:8:5
  │
8 │     let Video(_) as v = m
  │     ^^^^^^^^^^^^^^^^^^^^^

This case expression does not match all possibilities.
Each constructor must have a pattern that matches it or
else it could crash.

These values are not matched:

  - Audio
  - Text

